style: fix logo icon cropping to completely hide text stroke

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -59,11 +59,11 @@
 }
 
 .logoIcon {
-  width: 32px;
-  height: 40px;
+  width: 26px;
+  height: 32px;
   background-image: url('/bee-vibe-logo.png');
-  background-size: 110px auto;
-  background-position: -3px center;
+  background-size: 120px auto;
+  background-position: -10px center;
   background-repeat: no-repeat;
 }
 
